--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -29,4 +29,4 @@
     </div>
 </div>
 
-<app-preworkoutpage></app-preworkoutpage>
+<app-preworkoutpage *ngIf="accountService.isLoggedIn()" ></app-preworkoutpage>
