Overhaul of backend config. Able to add/remove/edit everything but workouts/routines themselves

--- a/src/app/preworkoutpage/preworkoutpage.component.html
+++ b/src/app/preworkoutpage/preworkoutpage.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="modal" id="modal-background">
+<!-- <div *ngIf="modal" id="modal-background">
     <div id="add-container">
         <button id="close-modal" (click)="showModal()">X</button>
         <div id="modal-components">
@@ -162,4 +162,4 @@
         </div>
     </div>
     <div id="stats-section-undef" *ngIf="lastEntry.routineExercise === undefined">Once you complete one workout, all of your stats will be listed in this area!</div>
-</div> 
+</div>  -->
