--- a/src/app/createworkoutpage/createworkoutpage.component.html
+++ b/src/app/createworkoutpage/createworkoutpage.component.html
@@ -1,3 +1,5 @@
+<!--TODO: redo styling and config-->
+
 <div id="container">
 
     <div *ngIf="createModal" id="create-modal-background">
@@ -41,32 +43,40 @@
     <form [formGroup]="workoutForm">
     <div>
         <h1 *ngIf="!routineInput">Routine Name:</h1>
-        <select formControlName="routine"  name="Routine" id="routine-select" #select (change)="onOptionSelect(select.value)">
-            <option *ngFor="let routine of routineList" [ngValue]="routine" value="{{routine.id}}" >{{routine.workoutName}}</option>
+        <select [formControl]="routineControl"  name="Routine" id="routine-select" #select  (change)="onOptionSelect(select.value)">
+            <option *ngFor="let routine of routineList" [ngValue]="routine" >{{routine.workoutName}}</option>
             <option value="New" selected>New Routine</option>
         </select>
     </div>
     <div>
+
         <input *ngIf="routineInput" class="workout-info" type="text" id="routine_name" placeholder="Routine Name"/>
     </div>
     <div>
-        <input  class="workout-info" id="name" type="text" required placeholder="WORKOUT NAME"/>
-        <select id="day-select">
+        <select [formControl]="workoutNameControl" *ngIf="selectedWorkout!==undefined && newWorkoutInput" #workoutSelect (change)="onWorkoutSelect()">
+            <option *ngFor="let routine of selectedWorkout.routine" [ngValue]="routine" value="{{routine.id}}" >
+                {{routine.routineName}}
+            </option>
+            <option value="New">New Workout</option>
+        </select>
+        <input *ngIf="workoutInput"  class="workout-info" id="name" type="text" required placeholder="WORKOUT NAME" />
+        <select [formControl]="dayControl" *ngIf="dayInput" id="day-select" >
             <option *ngFor="let day of routineDotw" value="{{day.num}}">{{day.name}}</option>
         </select>
+
     </div>
     <div id="exercise-list">
-        <div *ngFor="let exercise of exercises" class="exercise-list-item" id="{{exercise}}">
-            <div id="exercise-item-name">{{exercise.exerciseName}}</div>
+        <div *ngFor="let exercise of routineCurrentExercises" class="exercise-list-item" id="{{exercise}}">
+            <div id="exercise-item-name">{{exercise.exercise.exerciseName}}</div>
             <div>
-                <input type="number" required id="{{exercise.id}}-weight"  class="list-lbs-input" min=1 max=999 placeholder="300"/>lbs
+                <input type="number" required id="{{exercise.id}}-weight"  class="list-lbs-input" min=1 max=999 placeholder="300" />lbs
             </div>
             <div>
-                <input type="number" required id="{{exercise.id}}-sets" class="list-reps-input" min=1 max=99 placeholder="4"/>
+                <input type="number"  value="{{exercise.routine_sets}}" required id="{{exercise.id}}-sets" class="list-reps-input" min=1 max=99 placeholder="4"/>
                 x
-                <input type="number" required id="{{exercise.id}}-min-reps"class="list-reps-min-input" min=1 max=99 placeholder="8"/>
+                <input type="number" value="{{exercise.routine_goal_reps_min}}" required id="{{exercise.id}}-min-reps"class="list-reps-min-input" min=1 max=99 placeholder="8"/>
                 -
-                <input type="number" required id="{{exercise.id}}-max-reps" class="list-reps-max-input" min=1 max=99 placeholder="12"/>
+                <input type="number" value="{{exercise.routine_goal_reps_max}}" required id="{{exercise.id}}-max-reps" class="list-reps-max-input" min=1 max=99 placeholder="12"/>
             </div>
             <div>
                 <input type="number" required id="{{exercise.id}}-minutes" class="list-reps-min-input" min=1 max=99 placeholder="2"/>
