--- a/src/app/createworkoutpage/createworkoutpage.component.sass
+++ b/src/app/createworkoutpage/createworkoutpage.component.sass
@@ -277,12 +277,22 @@ input[type=number]
 
 
 #routine-select
-    background-color: #196279
+    background-color: #1d7b97
     border: none
-    font-size: 12pt
+    font-size: 35pt
     font-weight: 600
     font-family: 'Rubik', sans-serif
     color: white
+    text-align: center
+    border-radius: 5px
+    -moz-appearance: none
+    -webkit-appearance: none
+    background-image: linear-gradient(to bottom, #1d7b97 0% ,#1b728d 100%)
+    option
+        text-align: center
+
+#routine-select:hover
+    border: 1px solid #ffffff
 
 #routine:after 
   position: absolute
