--- a/src/app/navbar/navbar.component.sass
+++ b/src/app/navbar/navbar.component.sass
@@ -1,6 +1,8 @@
 nav 
     font-family: 'Rubik', sans-serif
     font-weight: 800
+    padding-bottom: 2.5em
+    
     
 ul 
     list-style: none
@@ -11,6 +13,12 @@ ul
 #panfit 
     flex-basis: 5%
     font-size: 40pt
+    text-decoration: none
+
+    :hover
+        color: white
+    a
+        text-decoration: none
 
 .item
     flex-basis: 15%
