--- a/src/app/createworkoutpage/createworkoutpage.component.html
+++ b/src/app/createworkoutpage/createworkoutpage.component.html
@@ -1,4 +1,3 @@
-<!--TODO: redo styling and config-->
 
 <div id="container">
 
@@ -39,30 +38,39 @@
             <button class="button" id="modal-submit" (click)="showCreateModal()">CREATE CUSTOM EXERCISE</button>
         </div>
     </div>
-    <button id="workout-done"  class="button" (click)="postAll()">DONE</button>
+    <button id="workout-add"  (click)="postAll()">SUBMIT</button>
+    <button id="workout-return" routerLink="">&lt; RETURN TO HOME</button>
     <form [formGroup]="workoutForm">
     <div>
-        <h1 *ngIf="!routineInput">Routine Name:</h1>
-        <select [formControl]="routineControl"  name="Routine" id="routine-select" #select  (change)="onOptionSelect(select.value)">
+        <h1 *ngIf="!routineInput">Routine:</h1>
+        <select *ngIf="routineSelect" [formControl]="routineControl"  name="Routine" id="routine-select" #select  (change)="onOptionSelect(select.value)">
             <option *ngFor="let routine of routineList" [ngValue]="routine" >{{routine.workoutName}}</option>
             <option value="New" selected>New Routine</option>
         </select>
     </div>
     <div>
 
-        <input *ngIf="routineInput" class="workout-info" type="text" id="routine_name" placeholder="Routine Name"/>
+        <input *ngIf="routineInput" class="workout-info" type="text" id="routine_name" placeholder="Routine Name" (blur)="onBlur('routineInput','routine_name')"/>
     </div>
-    <div>
+    <div id="workout-day-select-container">
+        <div>
+        <h1 *ngIf="workoutTitle">Workout:</h1>
         <select [formControl]="workoutNameControl" *ngIf="selectedWorkout!==undefined && newWorkoutInput" #workoutSelect (change)="onWorkoutSelect()">
             <option *ngFor="let routine of selectedWorkout.routine" [ngValue]="routine" value="{{routine.id}}" >
                 {{routine.routineName}}
             </option>
             <option value="New">New Workout</option>
         </select>
-        <input *ngIf="workoutInput"  class="workout-info" id="name" type="text" required placeholder="WORKOUT NAME" />
+        
+        <input *ngIf="workoutInput"  class="workout-info" id="name" type="text" required placeholder="WORKOUT NAME" (blur)="onBlur('newWorkoutInput','name')"/>
+        </div>
+
+        <div>
+        <h1 *ngIf="dayInput">Day:</h1>
         <select [formControl]="dayControl" *ngIf="dayInput" id="day-select" >
             <option *ngFor="let day of routineDotw" value="{{day.num}}">{{day.name}}</option>
         </select>
+        </div>
 
     </div>
     <div id="exercise-list">
@@ -86,7 +94,8 @@
             </div>
             <button class="delete-button" (click)="deleteElement(exercise)">X</button>
         </div>
+        <button  id="add-exercise-button" class="button" (click)="showModal()">ADD EXERCISE</button>
     </div>
     </form>
-    <button class="button" (click)="showModal()">ADD EXERCISE</button>
+
 </div>
