--- a/src/app/preworkoutpage/preworkoutpage.component.html
+++ b/src/app/preworkoutpage/preworkoutpage.component.html
@@ -1,13 +1,13 @@
-<!-- <div *ngIf="modal" id="modal-background">
+<div *ngIf="modal" id="modal-background">
     <div id="add-container">
         <button id="close-modal" (click)="showModal()">X</button>
         <div id="modal-components">
             <label id="modal-label">Routine List</label>
             <select id="current-select">
-                <option *ngFor="let routine of workoutList" [value]="routine.id">{{routine.workoutName}}</option>
+                <option *ngFor="let workout of workoutList" [value]="workout.id">{{workout.workoutName}}</option>
             </select>
         </div>
-        <button class="button" id="modal-submit" (click)="updateCurrentWorkout()">CHOOSE NEW ROUTINE</button>
+        <button class="button" id="modal-submit" (click)="updateCurrentWorkout()" routerLinkActive="/">CHOOSE NEW ROUTINE</button>
     </div>
 </div>
 
@@ -32,7 +32,8 @@
             <p>{{dotw[1]}}</p>
             <p>WORKOUT: {{routines[1]}}</p>
             <p *ngIf="routines[1] != 'DAY OFF'">AVG TIME: 1H 2M</p>
-            <button  *ngIf="routines[1] != 'DAY OFF'" class="button" type="submit" routerLink="/workout">START WORKOUT</button> 
+            <button  *ngIf="routines[1] != 'DAY OFF' && this.lastEntry.entryDate.toLocaleString() !== todayDate" class="button" type="submit" routerLink="/workout">START WORKOUT</button> 
+            <button  *ngIf="routines[1] != 'DAY OFF' && this.lastEntry.entryDate.toLocaleString() === todayDate" class="button" type="submit" disabled>COMPLETED</button>
         </div>
         <div class="workout-off">
             <p><span class="workout-title">{{dotw[6]}} {{dotw[5]}} {{dotw[7]}}</span></p>
@@ -48,7 +49,7 @@
         <button class="button" (click)="showModal()">CHANGE CURRENT ROUTINE</button>
     </div>
 <hr>
-    <div id="stats-section" *ngIf="lastEntry.routineExercise !== undefined">
+    <div id="stats-section" *ngIf="lastEntry.routine !== undefined">
         <div id="last-workout-container">
             <span>LAST WORKOUT</span>
             <div id="last-workout-inner" >
@@ -68,7 +69,7 @@
                     <li>
                         WORKOUT NAME:
                         <ul>
-                            <li >{{lastEntry.routineExercise.routine.routineName}}</li>
+                            <li >{{lastEntry.routine.routineName}}</li>
                         </ul>
                     </li>
                     <li>
@@ -113,10 +114,10 @@
                     </tr>
                     <tr *ngFor="let e of entries">
                         <td>
-                            {{e.entry_date}}
+                            {{e.entryDate}}
                         </td>
                         <td>
-                            {{e.routineExercise.routine.routineName}}
+                            {{e.routine.routineName}}
                         </td>
                         <td>
                             +100 lbs
@@ -161,5 +162,5 @@
             </div>
         </div>
     </div>
-    <div id="stats-section-undef" *ngIf="lastEntry.routineExercise === undefined">Once you complete one workout, all of your stats will be listed in this area!</div>
-</div>  -->
+    <div id="stats-section-undef" *ngIf="lastEntry.routine === undefined">Once you complete one workout, all of your stats will be listed in this area!</div>
+</div>  
