Overhauled create workout page yet again and added draggable elements and fully editable and updatable exercises w/in workouts.
Fixed bugs in logged in homepage

--- a/src/app/component/workout/workout.component.html
+++ b/src/app/component/workout/workout.component.html
@@ -42,5 +42,5 @@
             </table>
         </div>
     </div>
-    <button (click)="postWorkout()">Aq jeez</button>
+    <button id="submit-button" class="button" (click)="postWorkout()">Aq jeez</button>
 </div>
