--- a/src/app/component/workout/workout.component.sass
+++ b/src/app/component/workout/workout.component.sass
@@ -60,7 +60,13 @@ h1
     background-color: #b33935
     text-align: center
     height: 8vh
+
+#submit-button
+    margin-bottom: 15em
+    margin-top: 5em
+
+.button
+    background-color: green
     
 
-#rest-timer
     
