--- a/src/app/createworkoutpage/createworkoutpage.component.sass
+++ b/src/app/createworkoutpage/createworkoutpage.component.sass
@@ -31,7 +31,7 @@ hr
 
 #exercise-list
     width: 95%
-    height: 65vh
+    height: 50vh
     display: flex
     flex-direction: column
     overflow-y: auto
@@ -105,6 +105,7 @@ hr
     width: 75%
     border-radius: 30px
     background-color: #DB504A
+    position: relative
     
 
 #close-modal
@@ -166,6 +167,7 @@ hr
     flex-direction: column
     align-items: center
     align-content: center
+
     
 
 #modal-submit 
@@ -261,9 +263,7 @@ input[type=number]
 
 #workout-add
     position: absolute
-    bottom: 1em
-    margin-left: auto
-    margin-right: auto
+    right: 1em
     border-radius: 5px
     padding: 0.75em
     background-color: #4adb62
@@ -272,7 +272,7 @@ input[type=number]
     font-weight: 600
 
     color: white
-    font-size: 20pt
+    font-size: 14pt
     border: none
 
     :active
