--- a/src/app/preworkoutpage/preworkoutpage.component.sass
+++ b/src/app/preworkoutpage/preworkoutpage.component.sass
@@ -20,6 +20,10 @@
     text-align: center
     font-size: 2em
     font-weight: 600
+    display: flex
+    flex-direction: column
+    margin-bottom: .5em
+    
     
 
 .workout-off
