--- a/src/app/component/workout/workout.component.sass
+++ b/src/app/component/workout/workout.component.sass
@@ -9,13 +9,13 @@
     margin-left: 8vw
     margin-right: 8vw
     text-align: center
-    padding-bottom: 2vh
+    padding-bottom: 10vh
     padding-top: 2vh
 
 #exercise-container
     background-color: #188DB1
-    margin-left: 20vw
-    margin-right: 20vw
+    margin-left: 10vw
+    margin-right: 10vw
     padding-bottom: 5vh
 
 #exercise-inner-container
@@ -25,7 +25,7 @@
     margin-right: 2vw
     padding-bottom: 2vh
     color: black
-    font-size: 12pt
+    font-size: 15pt
 
 #exercise-table
     border-spacing: 1.25vw 0.5vh 
@@ -67,6 +67,28 @@ h1
 
 .button
     background-color: green
-    
+    font-size: 15pt
 
-    
+#end-workout-button
+    @extend %font
+    color: white
+    font-size: 30pt
+    display: flex
+    justify-content: space-around
+    text-align: center
+    border: 0
+    width: 100%
+    background-color: #b33935
+    :hover
+        background-color:#912d2a
+
+
+input
+    @extend %font
+    color: white
+    font-size: 15pt
+    background-color: #188DB1
+    border: none
+    height: 3vh
+    width: 5vw
+    text-align: center
