--- a/src/styles.sass
+++ b/src/styles.sass
@@ -9,6 +9,10 @@ html
 html::-webkit-scrollbar
     display: none
 
+body
+    scrollbar-width: thin
+    scrollbar-color: #14718d #C6FDFF
+
 .button
     background-color: #DB504A
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
