--- a/src/app/preworkoutpage/preworkoutpage.component.sass
+++ b/src/app/preworkoutpage/preworkoutpage.component.sass
@@ -73,7 +73,7 @@ hr
     color: white
 
 select
-    background-color: #DB504A
+    background-color: #91322f
     border: none
     font-size: 35pt
     font-weight: 600
@@ -83,7 +83,6 @@ select
     border-radius: 5px
     -moz-appearance: none
     -webkit-appearance: none
-    background-image: linear-gradient(to bottom, #c72a25 0% ,#b32925 100%)
     option
         text-align: center
 
@@ -138,11 +137,17 @@ select
     @extend %container
     span
         font-size: 24pt
+    
 
 
 
 #progression-inner
     @extend %inner
+    position: relative
+    padding: 5px
+
+#chartContainer
+    position: relative
 
 
 #history-container
@@ -277,3 +282,10 @@ select
 
 .neg
     color: red
+
+.prog-select
+    height: 1.25em
+    width: 25%
+    font-size: 20pt
+    background-color: #0F5E76
+    color: white
