Configured more of workout histroy and made it able to change current routine. Also added cnacel button to workout

--- a/src/app/component/workout/workout.component.html
+++ b/src/app/component/workout/workout.component.html
@@ -13,6 +13,7 @@
 </div>
 
 <div id="container">
+    <button id="workout-return" routerLink="">&lt; CANCEL WORKOUT</button>
     <h1>{{routine.routineName}}</h1>
     <div *ngFor="let exercise of exercises;let x = index;" id="exercise-container">
         <div id="exercise-title-bar">
