--- a/src/app/component/workout/workout.component.sass
+++ b/src/app/component/workout/workout.component.sass
@@ -8,10 +8,14 @@
     background-color: #0F5E76
     margin-left: 8vw
     margin-right: 8vw
-    text-align: center
+    text-align: left
     padding-bottom: 10vh
     padding-top: 2vh
+    h1
+        text-align: center
 
+
+    
 #exercise-container
     background-color: #188DB1
     margin-left: 10vw
@@ -92,3 +96,17 @@ input
     height: 3vh
     width: 5vw
     text-align: center
+
+#workout-return 
+    position: relative
+    left: 0
+    
+    border-radius: 5px
+    padding: 0.75em
+    background-color: #81e0fd
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    font-family: 'Rubik', sans-serif
+    font-weight: 600
+    color: white
+    font-size: 14pt
+    border: none
