--- a/src/app/preworkoutpage/preworkoutpage.component.html
+++ b/src/app/preworkoutpage/preworkoutpage.component.html
@@ -5,6 +5,7 @@
             <label id="modal-label">Routine List</label>
             <select id="current-select">
                 <option *ngFor="let workout of workoutList" [value]="workout.id">{{workout.workoutName}}</option>
+
             </select>
         </div>
         <button class="button" id="modal-submit" (click)="updateCurrentWorkout()" routerLinkActive="/">CHANGE ROUTINE</button>
@@ -29,8 +30,8 @@
             <p>{{dotw[1]}}</p>
             <p>WORKOUT: {{routines[1]}}</p>
 
-            <button  *ngIf="routines[1]!=='DAY OFF' && this.lastEntry===undefined || routines[1]!=='DAY OFF' && this.lastEntry.entryDate.toLocaleString()!==todayDate" class="button" type="submit" routerLink="/workout">START WORKOUT</button> 
-            <button  *ngIf="routines[1]!=='DAY OFF' && this.lastEntry.entryDate.toLocaleString()===todayDate" class="button" type="submit" disabled>COMPLETED</button>
+            <button  *ngIf="routines[1]!=='DAY OFF' && this.lastEntry.id===null || routines[1]!=='DAY OFF' && formatDBDate(this.lastEntry.entryDate)!==todayDate" class="button" type="submit" routerLink="/workout">START WORKOUT</button> 
+            <button  *ngIf="routines[1]!=='DAY OFF' && this.lastEntry.id!==null" class="button" type="submit" disabled>COMPLETED</button>
         </div>
         <div class="workout-off">
             <p><span class="workout-title">{{dotw[6]}} {{dotw[5]}}, {{dotw[7]}}</span></p>
@@ -72,7 +73,7 @@
                         NET WEIGHT LIFTED:
                         <ul>
                             <li [ngClass]="{'pos': lastEntry.netWeight > 0,
-                                'neg': lastEntry.netWeight < 0}">{{lastEntry.netWeight}}</li>
+                                'neg': lastEntry.netWeight < 0}">{{lastEntry.netWeight || 0}}</li>
                         </ul>
                     </li>
                     <li>
